# Some-Small-Projects

./: README.md
JAVAFX/FapteBune/: build.gradle
JAVAFX/OferteDeVacanta/: build.gradle  settings.gradle
JAVAFX/Scripts/: fapteBune.sql  oferteDeVacanta.sql  taximetrie.sql  trenuri.sql  zboruri.sql
JAVAFX/Taximetrie/: build.gradle
JAVAFX/Trenuri/: build.gradle
JAVAFX/Zboruri/: build.gradle
OOP-QT-C++/Examen cu UndoRedo/: Gui.cpp  Gui.h  MyTableModel.h  Repo.h  Service.h  Student.h  Teste.h  Undo.h  main.cpp
OOP-QT-C++/Melodii 1/: Gui.cpp  Gui.h  Melodie.cpp  Melodie.h  MyTableModel.h  Repo.cpp  Repo.h  Service.cpp  Service.h  main.cpp
OOP-QT-C++/Melodii 2/: Gui.cpp  Gui.h  Melodie.h  MyTableModel.h  Repo.cpp  Repo.h  Service.cpp  Service.h  Validator.h  main.cpp
OOP-QT-C++/Produse/: Gui.cpp  Gui.h  MyTableModel.h  Observer.h  Produs.h  Repo.cpp  Repo.h  Service.cpp  Service.h  Validator.h  main.cpp
OOP-QT-C++/Sudoku/: Gui.cpp  Gui.h  Sudoku.cpp  Sudoku.h  main.cpp
OOP-QT-C++/SudokuGraphicsView/: GraphicsGui.cpp  GraphicsGui.h  Stuff.h  Sudoku.cpp  Sudoku.h  main.cpp
OOP-QT-C++/Taskuri/: Gui.cpp  Gui.h  MyTableModel.h  Observer.h  Repo.cpp  Repo.h  Service.cpp  Service.h  Task.h  Validator.h  main.cpp
OOP-QT-C++/TicTacToe/: Gui.cpp  Gui.h  Joc.h  MyTableModel.h  Repo.h  Service.h  Validator.h  main.cpp
OOP-QT-C++/Tractoare/: Gui.cpp  Gui.h  MyTableModel.h  Repo.cpp  Repo.h  Service.h  Tractor.h  Validator.h  main.cpp
SFML/: Taking a screenshot.txt
SFML/ECS Geometry Shooter/: Entity.h  (+9 more)
SFML/TicTacToe/: CMakeLists.txt  Game.cpp  Game.h  main.cpp
(+135 files in other folders)
